# lesta_test_assignment

./: .gitignore  README.md
fifo/cpp/: CMakeLists.txt  Makefile  main.cpp
fifo/cpp/include/: containers.h  containers.hpp
is_even/cpp/: CMakeLists.txt  Makefile  README.md  main.cpp
is_even/py/: README.md  is_even.py
